--- a/project/templates/music.html
+++ b/project/templates/music.html
@@ -130,7 +130,7 @@
               ></button>
             </div>
             <div class="modal-body">
-              <form>
+              <form action="{{ url_for('music_create') }}" method="GET">
                 <div class="mb-3">
                   <label for="exampleInputEmail1" class="form-label"
                     >유저</label
@@ -140,6 +140,7 @@
                     class="form-control"
                     id="exampleInputEmail1"
                     aria-describedby="emailHelp"
+                    name="username"
                   />
                   <div id="emailHelp" class="form-text">
                     사용자(추천인)의 이름을 넣어주세요.
@@ -153,6 +154,7 @@
                     type="text"
                     class="form-control"
                     id="exampleInputPassword1"
+                    name="title"
                   />
                   <div id="emailHelp" class="form-text">
                     좋아하는 노래 제목을 넣어주세요.
@@ -166,6 +168,7 @@
                     type="text"
                     class="form-control"
                     id="exampleInputPassword1"
+                    name="artist"
                   />
                 </div>
                 <div class="mb-3">
@@ -176,6 +179,7 @@
                     type="text"
                     class="form-control"
                     id="exampleInputPassword1"
+                    name="image_url"
                   />
                 </div>
                 <button type="submit" class="btn btn-danger">Submit</button>
@@ -186,62 +190,22 @@
       </div>
 
       <div class="row row-cols-1 row-cols-md-4 g-4 mx-auto w-75 pb-5">
+        {% for song in data %}
         <div class="col">
           <div class="card h-100">
             <img
-              src="https://s3.ap-northeast-2.amazonaws.com/materials.spartacodingclub.kr/webjong/ive.jpg"
+              src="{{ song.image_url }}"
               class="card-img-top"
-              alt="..."
+              alt="{{ song.title }}"
             />
             <div class="card-body">
-              <h5 class="card-title">Love Dive</h5>
-              <p class="card-text">아이브(IVE)</p>
-              <p class="card-text">추천 by 최지웅</p>
+              <h5 class="card-title">{{ song.title }}</h5>
+              <p class="card-text">{{ song.artist }}</p>
+              <p class="card-text">추천 by {{ song.username }}</p>
             </div>
           </div>
         </div>
-        <div class="col">
-          <div class="card h-100">
-            <img
-              src="https://s3.ap-northeast-2.amazonaws.com/materials.spartacodingclub.kr/webjong/ive.jpg"
-              class="card-img-top"
-              alt="..."
-            />
-            <div class="card-body">
-              <h5 class="card-title">Love Dive</h5>
-              <p class="card-text">아이브(IVE)</p>
-              <p class="card-text">추천 by 최지웅</p>
-            </div>
-          </div>
-        </div>
-        <div class="col">
-          <div class="card h-100">
-            <img
-              src="https://s3.ap-northeast-2.amazonaws.com/materials.spartacodingclub.kr/webjong/ive.jpg"
-              class="card-img-top"
-              alt="..."
-            />
-            <div class="card-body">
-              <h5 class="card-title">Love Dive</h5>
-              <p class="card-text">아이브(IVE)</p>
-              <p class="card-text">추천 by 최지웅</p>
-            </div>
-          </div>
-        </div>
-        <div class="col">
-          <div class="card h-100">
-            <img
-              src="https://s3.ap-northeast-2.amazonaws.com/materials.spartacodingclub.kr/webjong/ive.jpg"
-              class="card-img-top"
-              alt="..."
-            />
-            <div class="card-body">
-              <h5 class="card-title">Love Dive</h5>
-              <p class="card-text">아이브(IVE)</p>
-              <p class="card-text">추천 by 최지웅</p>
-            </div>
-          </div>
-        </div>
+        {% endfor %}
       </div>
     </div>
 
