--- a/project/templates/music.html
+++ b/project/templates/music.html
@@ -199,9 +199,16 @@
               alt="{{ song.title }}"
             />
             <div class="card-body">
-              <h5 class="card-title">{{ song.title }}</h5>
+              <h5 class="card-title">{{ song.id }} {{ song.title }}</h5>
               <p class="card-text">{{ song.artist }}</p>
               <p class="card-text">추천 by {{ song.username }}</p>
+              <!-- 삭제 버튼 -->
+              <form
+                action="{{ url_for('delete_song', song_id=song.id) }}"
+                method="post"
+              >
+                <button type="submit" class="btn btn-danger">삭제</button>
+              </form>
             </div>
           </div>
         </div>
